# Analytics-Accelerator

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PORTFOLIO.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
api/: main.py
api/routers/: copilot.py  data.py  health.py  models.py  recommendations.py  simulation.py
api/schemas/: recommendations.py  simulation.py
dashboard/: app.py
dashboard/components/: charts.py  kpi_card.py  styles.py
dashboard/pages/: 01_executive_overview.py  02_data_audit.py  03_eda.py  04_statistical_analysis.py  05_model_performance.py  06_scenario_simulator.py  07_recommendations.py  08_ai_copilot.py
docker/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.streamlit
notebooks/: 00_data_exploration.ipynb
scripts/: generate_data.py  generate_recommendations.py  generate_slides.py  run_audit.py  run_eda.py  train_models.py
src/bcgx/: __init__.py
src/bcgx/audit/: quality.py  report.py
src/bcgx/config/: __init__.py  logging.py  settings.py
src/bcgx/copilot/: agent.py  prompts.py  tools.py
src/bcgx/data/: generator.py  lineage.py  loader.py  validator.py
src/bcgx/eda/: bivariate.py  insights.py  temporal.py  univariate.py
src/bcgx/explainability/: shap_explainer.py
src/bcgx/features/: customer_features.py  feature_store.py  product_features.py  store_features.py
src/bcgx/models/: base.py
src/bcgx/models/churn/: evaluator.py  pipeline.py  trainer.py
src/bcgx/models/marketing_mix/: pipeline.py  trainer.py
src/bcgx/models/price_elasticity/: pipeline.py  trainer.py
src/bcgx/recommendations/: __init__.py  engine.py  prioritizer.py  schema.py
src/bcgx/reporting/: __init__.py  slides.py
src/bcgx/simulation/: __init__.py  engine.py  impact.py  scenarios.py
src/bcgx/statistics/: ab_testing.py  elasticity.py  hypothesis.py  segmentation.py
tests/: conftest.py
tests/integration/: test_api_health.py
tests/unit/: conftest.py  test_config.py  test_data_generator.py  test_data_validator.py  test_models.py  test_statistics.py
(+3 files in other folders)
